# gengar

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/common/: abi.rs  bytecode.rs  constants.rs  evm.rs  mod.rs  streams.rs  token_loader.rs  utils.rs
src/pools/: generic_pool.rs  mod.rs  pool_filters.rs  pool_loader.rs  protocols.rs  sushiswap.rs  sushiswap_v2.rs  uniswap_v2.rs  uniswap_v3.rs  utils.rs
src/simulation/: batch_sandwich.rs  mod.rs  optimizor.rs  tracing.rs  types.rs  utils.rs
src/strategies/: hop_extractor.rs  mod.rs  strategy.rs
