[package]
name = "gengar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gengar"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15" 
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
csv = "1.2.2"
colored = "2.0.0"
log = "0.4.17"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.23"
indicatif = "0.17.5"
tokio-stream = { version = "0.1", features = ['sync'] }
tokio-tungstenite = "*"

anyhow = "1.0.70"
log4rs = "1.0"
serde = "1.0.188"
serde_json = "1.0.107"
itertools = "0.11.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
eyre = "0.6"



revm = "10.0.0"

ethers-core = "2.0"
ethers-providers = "2.0"
ethers-contract = "2.0"
ethers = { version = "2.0", features = ["abigen", "ws", "ipc"] }

alloy = { version = "0.1", features = ["full"] }
alloy-transport = "0.1.3"
alloy-provider = "0.1.3"
alloy-network = "0.1.3"
alloy-pubsub = "0.1.3"
alloy-json-rpc = "0.1.3"
alloy-rpc-types-eth = "0.1.3"
alloy-sol-types = "0.7.6"
alloy-dyn-abi = "0.7.7"
alloy-serde = "0.1.4"
alloy-primitives = "0.7.7"


futures = "0.3.5"
futures-util = "*"
